# fp_ws_utils

./: Cargo.toml  README.md
examples/: complex_example.rs  hyperliquid_example.rs  simple_bot.rs  simple_example.rs
src/: app.rs  engine.rs  handler.rs  lib.rs  main.rs  state.rs  types.rs
src/handlers/: forwarder.rs  ping_pong.rs
src/modules/: auth.rs  forwarder.rs  heartbeat.rs  logging.rs  ping_pong.rs  subscription.rs
src/on_connect/: auth.rs  mod.rs  subscription.rs
