[package]
name = "rust_ws"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
futures = "0.3.31"
futures-util = "0.3.31"
frunk = "0.4.4"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.28.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
paste = "1.0.15"
