[package]
name = "rust_ws"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_ws"
path = "src/lib.rs"

[[example]]
name = "simple_example"
path = "examples/simple_example.rs"

[[example]]
name = "complex_example"
path = "examples/complex_example.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
futures = "0.3.31"
futures-util = "0.3.31"
frunk = "0.4.4"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.28.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
paste = "1.0.15"
