[package]
name = "frunk_ws"
version = "0.1.0"
edition = "2024"

[lib]
name = "frunk_ws"
path = "src/lib.rs"

[[example]]
name = "simple_bot"
path = "examples/simple_bot.rs"

[[example]]
name = "hyperliquid_example"
path = "examples/hyperliquid_example.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
futures = "0.3.31"
futures-util = "0.3.31"
frunk = "0.4.4"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
paste = "1.0.15"
serde_json = "1.0.145"
tracing = "0.1.43"
serde = "1.0.228"
